--- a/src/app/[lang]/contact/page.module.scss
+++ b/src/app/[lang]/contact/page.module.scss
@@ -8,6 +8,13 @@
   }
 }
 
+@media (max-width: 1445px) {
+  .contact {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
 .description {
   color: var(--muted);
   margin-bottom: 2rem;
